try to put analytics

--- a/apps/conseils/front/templates/conseils.html
+++ b/apps/conseils/front/templates/conseils.html
@@ -26,7 +26,7 @@ Comme le judoka qui porte un kimono pour entrer sur le tatami, tu dois adapter t
 					Ainsi :
 					<ul>
 						<li style="font-size:medium;">Sur la <strong>forme</strong>, ton CV doit être <strong>structuré et lisible</strong></li>
-						<li style="font-size:medium;">Sur le <strong>fond</strong>, ton CV ne doit comporter <strong>aucune faute</strong> et doit permettre au recruteur de se dire que tu es le candidat idéal au poste. Mentionne donc tout les éléments que tu juges pertinents dans le cadre de l'offre et du poste auquel tu candidates. Enfin, n'oublie pas de préciser le poste auquel tu candidates ainsi que la période sur laquelle tu cherches un stage/emploi.</li>
+						<li style="font-size:medium;">Sur le <strong>fond</strong>, ton CV ne doit comporter <strong>aucune faute</strong> et doit permettre au recruteur de se dire que tu es le candidat idéal au poste. Mentionne donc tous les éléments que tu juges pertinents dans le cadre de l'offre et du poste auquel tu candidates. Enfin, n'oublie pas de préciser le poste auquel tu candidates ainsi que la période sur laquelle tu cherches un stage/emploi.</li>
 					</ul>
 					<p style="font-size:medium;">En fonction de l'entreprise dans laquelle tu postules, il peut être utile d'avoir un CV en français ou en anglais.</p>
 					<br>
