--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -1,4 +1,13 @@
 <script src="/apps/accueil/front/js/window_height.js" type="text/javascript"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G9JD9QGM1W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G9JD9QGM1W');
+</script>
 <!--  =====================================================================	-->
 <!-- 		SLIDER	 														-->													 
 <!--  =====================================================================	-->
