--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -30,8 +30,6 @@
 						<h2>Jeudi 2 décembre 2021 au Centre Prouvé de Nancy</h2>
 						<p>Découvrez l'un des plus grands salons de rencontres entre étudiants et entreprises du Grand
 							Est.</p>
-						<!-- <p><a class="btn btn-lg btn-tertiary " href="/inscription" role="button">Inscrivez-vous</a></p> -->
-						<!-- Trigger the modal with a button -->
 						<button type="button" class="btn btn-lg btn-tertiary" data-toggle="modal"
 							data-target="#myModal2">En savoir plus</button>
 
@@ -59,8 +57,9 @@
 				<div class="container">
 					<div class="carousel-caption">
 						<h1>L'équipe</h1>
-						<p>Découvrez la liste des exposants de l'édition 2020.</p>
-						<p><a class="btn btn-lg btn-primary" href="/exposant" role="button">En savoir plus</a></p>
+						<button type="button" class="btn btn-lg btn-tertiary" data-toggle="modal"
+							data-target="#myModal3">En savoir
+							plus</button>
 					</div>
 				</div>
 			</div>
@@ -145,24 +144,98 @@
 				<p class="lead text-justify">
 
 				<p class="lead text-justify">Le Forum Est-Horizon (FEH) est une association étudiante de l’École des
-					Mines de Nancy. Depuis 1984, elle organise chaque année l'évènement Forum Est-Horizon, un des plus
-					grands salons de rencontres professionnelles entre étudiants et entreprises du Grand Est. Ce forum
-					n’est pas uniquement destiné aux étudiants de Mines Nancy : il est <strong>gratuit</strong> pour
-					tous les étudiants.</p>
+					Mines de Nancy. [Mines de Nancy cliquable et
+					renvoie vers leur site] Depuis 1984, elle organise chaque année l'évènement Forum Est-Horizon, un
+					des plus grands salons
+					de rencontres professionnelles entre étudiants et entreprises du Grand Est. Ce forum n’est pas
+					uniquement destiné aux
+					étudiants de Mines Nancy. De plus, il est <strong>gratuit</strong> pour tous les étudiants.</p>
 				<p class="lead text-justify">Le Forum Est-Horizon propose aux étudiants d’obtenir des
-					<strong>stages</strong>, de s’informer sur les métiers ainsi que des corrections de CV, des
-					conférences de speakers reconnus, un concours de projets, etc. Les entreprises sont parmi les plus
-					prestigieuses et viennent de <strong>tous les secteurs</strong>: énergie, conseil, BTP, banques,
-					etc. De même, les étudiants viennent de <strong>toutes les filières</strong>: ingénierie, commerce,
-					management...
+					<strong>stages</strong>, de s’informer sur les métiers ainsi que des corrections
+					de CV, des conférences de speakers reconnus, un concours de projets, etc. Les entreprises sont parmi
+					les plus
+					prestigieuses et viennent de tous les secteurs: énergie, conseil, BTP, banques, etc. De même, les
+					étudiants viennent de
+					toutes les filières: ingénierie, commerce, management…
 				</p>
-				<p class="lead text-justify">L'édition 2019 a attiré 60 exposants et 1500 étudiants. <strong>Sylvie
-						Mattely</strong>, directrice adjointe de l'IRIS, et <strong>Samuel Nowakowski</strong>,
-					enseignant-chercheur au LORIA en humanités numériques, ont animé une conférence suivie de questions
-					sur le thème: <i>géopolitique et entreprises</i>.</p>
-				<p class="lead text-justify">L'édition 2020 s'est tenue <strong>du 8 au 10 décembre</strong> sur la
-					plateforme Seekube, dans un nouveau format 100% virtuel.</p>
+				<h3>Historique du Forum Est-Horizon ces dernières années:</h3>
+				<h4 class="lead text-justify">2014 : édition présidée par Vincent Laurent</h4>
+				<p class="lead text-justify">Après une édition dans la galerie des Mines de Nancy, l’équipe de Vincent a
+					décidé de donner un
+					souffle nouveau au Forum
+					en l’organisant au Centre Prouvé. C’était un pari risqué car cela doublait pratiquement les dépenses
+					par rapport à
+					l’édition précédente, on les remercie maintenant car c’est en partie grâce à eux que nous organisons
+					notre Forum au
+					Centre Prouvé. Il y a eu cette année 34 entreprises participantes et un peu plus de 700 visiteurs.
 				</p>
+				<h4 class="lead text-justify">2015 : édition présidée par Théo Michel</h4>
+				<p class="lead text-justify">L’équipe de Théo a également décidé d’organiser son édition au Centre
+					Prouvé de Nancy. La grande
+					nouveauté de leur année
+					était l’association avec Géologia, le forum de l’ENSG. Le Forum Est-Horizon a réuni 41 entreprises
+					et
+					1000 visiteurs, et
+					ces chiffres sont pratiquement doublés en prenant l’événement global Géologia-Forum Est-Horizon.
+				</p>
+				<h4 class="lead text-justify">2016 : édition présidée par Corentin Vermeulen-Couvelard</h4>
+				<p class="lead text-justify">Le Forum a décidé de suivre la ligne de conduite insufflée par les deux
+					éditions précédentes en restant
+					au Centre Prouvé
+					et en poursuivant l’association avec Geologia. L’ENSEM s’est également jointe au projet. Cette
+					année-là,
+					le Forum est
+					parvenu à rassembler 55 entreprises et un plus de 1000 visiteurs.
+				</p>
+
+				<h4 class="lead text-justify">2017 : édition présidée par Nicolas Raux</h4>
+				<p class="lead text-justify">Changement majeur, après deux ans de collaboration, le Forum Est-Horizon
+					est redevenu indépendant. Cette
+					édition a reçu
+					beaucoup de retours positifs notamment grâce à la présence d’Arnaud Montebourg en tant que
+					conférencier,
+					cela a été une
+					belle réussite pour cette édition, qui a attiré 1500 visiteurs.
+				</p>
+				<h4 class="lead text-justify">2018 : édition présidée par Elyès Chenik</h4>
+				<p class="lead text-justify">Dans la lignée de l’édition précédente. La recherche d'entreprises s’est
+					intensifiée et le Forum est
+					parvenu à réunir
+					plus de 60 entreprises, le plus grand nombre depuis quelques années. Légère diminution par rapport à
+					l’édition
+					précédente, le Forum a tout de même attiré environ 1200 personnes.
+				</p>
+				<h4 class="lead text-justify">2019 : édition présidée par Eulalie Charles-Lethon</h4>
+				<p class="lead text-justify">Toujours organisé au centre Prouvé, le Forum Est-Horizon perdure et réunit
+					cette fois encore plus de
+					1200 visiteurs pour
+					55 entreprises participantes à l’édition.
+				</p>
+				<h4 class="lead text-justify">2020 : édition présidée par Johann Cochet</h4>
+				<p class="lead text-justify">Malgré une grande préparation pour l’organisation de l’événement au Centre
+					Prouvé une année encore, et ce dû aux
+					conditions sanitaires tout à fait exceptionnelles, le Forum Est-Horizon s’est tenu entièrement en
+					ligne sur la
+					plateforme Seekube. Pour autant, un grand nombre de conférences a été donné et une grande partie des
+					ateliers ont été
+					maintenus pour cette édition. Qui, malgré la situation, a réussi à réunir environ 500 participants
+					et 40 entreprises.
+				</p>
+				</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 			</div>
 		</div>
 	</div>
@@ -264,7 +337,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title">Modal Header</h4>
+				<h4 class="modal-title">Conférence</h4>
 			</div>
 			<div class="modal-body">
 				<p>Le Forum Est-Horizon a déjà accueilli de grandes personnalités comme Arnaud Montebourg, ancien
@@ -292,7 +365,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title">Modal Header</h4>
+				<h4 class="modal-title">Informations</h4>
 			</div>
 			<div class="modal-body">
 				<p>Toute l’équipe du Forum Est-Horizon est très heureuse de vous accueillir sur son site
@@ -322,20 +395,34 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title">Modal Header</h4>
+				<h4 class="modal-title">L'équipe</h4>
 			</div>
 			<div class="modal-body">
-				<p>Toute l’équipe du Forum Est-Horizon est très heureuse de vous accueillir sur son site
-					internet. Cette année, l’équipe d’élèves ingénieurs des Mines de Nancy organise la 38ème
-					édition qui se tiendra le Jeudi 2 Décembre 2021 au Centre Prouvé à Nancy. </p>
+				<p>Cette année, l’équipe organisatrice du Forum Est-Horizon est composée de 23 membres, élèves
+					ingénieurs de l’école des
+					Mines de Nancy.
+					Leur défi est d’organiser, malgré la situation particulière, la 38ème édition du Forum qui se
+					tiendra au Centre Prouvé à
+					Nancy le Jeudi 2 Décembre 2021.
+					Pour cela, l’équipe est divisée en plusieurs pôles articulés autour du bureau, qui coordonne les
+					opérations. [insérer
+					organigramme]</p>
 
-				<p>Comme tous les ans, nous réunissons pour vous un grand nombre d’entreprises reconnues et
-					diversifiées afin de faciliter votre échange avec le monde du travail. En plus de vos
-					échanges avec les entreprises, nous avons également préparé divers ateliers et organisé
-					des conférences pour vous guider dans votre insertion dans le monde professionnel.
-				</p>
-				<p>Liste des événements proposés le jour du Forum : <a class="btn btn-warning " href="/programme"
-						role="button">Programme</a> </p>
+				<p>“Toute l'équipe du Forum Est-Horizon serait heureuse de vous recevoir pour cette 38e édition de
+					l'événement.
+					Moment important dans la vie d'un étudiant, nous espérons voir représentées des entreprises aussi
+					variées que reconnues,
+					dans le but d'organiser un événement fructueux pour tous.
+					Nous mesurons à quel point établir un contact direct avec une entreprise est important pour la
+					recherche d'un stage, ou
+					l'approche du monde du travail, c'est pourquoi cette rencontre nous tient autant à cœur.
+					C'est donc à votre service et à celui des étudiants que nous nous mettons pour permettre des
+					échanges qui
+					conditionneront les choix futurs de chacun.”</p>
+				<p>Mathis Faucher,
+					Président de l'association Forum Est-Horizon </p>
+
+
 
 			</div>
 			<div class="modal-footer">
