navigation add se preparer

--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -405,8 +405,8 @@
 					tiendra au Centre Prouvé à
 					Nancy le Jeudi 2 Décembre 2021.
 					Pour cela, l’équipe est divisée en plusieurs pôles articulés autour du bureau, qui coordonne les
-					opérations. [insérer
-					organigramme]</p>
+					opérations. </p>
+				<embed src="../assets/organigrame.pdf" width="800px" height="2100px" />
 
 				<p>“Toute l'équipe du Forum Est-Horizon serait heureuse de vous recevoir pour cette 38e édition de
 					l'événement.
