--- a/themes/feh/templates/index.html
+++ b/themes/feh/templates/index.html
@@ -170,6 +170,7 @@ if ($use_sts && isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] != 'off') {
 							<li><a href="/articles/">Actualités</a></li>
 							<li><a href="/exposant/">Exposants</a></li>
 							<li><a href="/conseils/">Se préparer</a></li>
+							<li><a href="/programme/">Jour J</a></li>
 							<li><a href="/galerie/">Galerie</a></li>
 
 							<li class="dropdown">
