--- a/apps/conseils/front/templates/conseils.html
+++ b/apps/conseils/front/templates/conseils.html
@@ -96,7 +96,7 @@
 				</p>
 			</div>
 
-			<div class="col-xs-12 col-sm-12 col-lg-12">
+			<div class="col-xs-12 col-sm-12 col-lg-12" id="cv">
 				<h3 style="color:rgba(0,0,0,1)">Conseil 6 : Être créactif pour se démarquer</h3>
 				<p class="lead text-justify" style="font-size:medium;">
 					Les recruteurs vont voir passer beaucoup de candidats avec des profils parfois similaires au tien.
@@ -112,58 +112,7 @@
 		</div>
 
 
-		<div class="col-xs-12 col-sm-12 col-lg-12">
-			<h3 style="color:rgba(0,0,0,1)">Conseil 4 : Un étudiant averti en vaut deux</h3>
-			<p class="lead text-justify" style="font-size:medium;">
-				Rencontrer un recruteur est l'occasion d'en savoir plus sur une entreprise, sa culture, ses
-				opportunités... Mais c'est aussi et surtout l'occasion de laisser ton CV et ta lettre de motivation.
-				Pour mettre toutes les chances de ton côté, il est nécessaire de te préparer en amont :
-			<ul>
-				<li style="font-size:medium;"><strong>Fais des recherches sur l'entreprise</strong> : Lors de
-					l'échange, montre ton intérêt pour l'entreprise en posant des questions pertinentes. Evite les
-					questions comme "Dans quels pays êtes vous présents ?" et demande plutôt "J'ai vu que vous avez
-					ouvert une filiale récemment en Amérique latine, comment prévoyez vous de vous faire une place
-					sur un nouveau marché aussi concurentiel ?"</li>
-				<li style="font-size:medium;"><strong>Fais des recherches sur le post visé</strong> : Lors de
-					l'échange, montre que tu sais de quoi tu parles. Tu veux travailler dans l'audit et le conseil ?
-					Ne demande surtout pas "qu'est ce que l'audit et le conseil ?". Profite plutôt de cette occasion
-					pour avoir des informations sur le ressenti des employés au sein de l'entreprise. Ou aborder des
-					spécificités de ce poste.</li>
-			</ul>
-			<p style="font-size:medium;"><strong>En bref</strong>, évite les généralités.</p>
-			</p>
-		</div>
 
-		<div class="col-xs-12 col-sm-12 col-lg-12">
-			<h3 style="color:rgba(0,0,0,1)">Conseil 5 : Rester maître de soi-même</h3>
-			<p class="lead text-justify" style="font-size:medium;">
-				Même si les recruteurs sont attentifs au fond de ton discours, ne néglige pas la forme de celui-ci.
-				En effet, tous les discours du monde ne valent pas une attitude sereine et calme.
-			<ul>
-				<li style="font-size:medium;"><strong>Reste calme et serein</strong> : Ton attitude en dit long sur
-					toi-même, reste calme pour montrer ton meilleur profil. Prends ton temps pour parler, ne te
-					précipite pas et articule correctement. La sérénité est la clé de ton recrutement.</li>
-				<li style="font-size:medium;"><strong>Garde un langage correct et soit poli</strong> : Fais
-					attention aux tics de langage, évite les « euuh », les « du coup » qui pourraient faire mauvaise
-					impression. Reste poli tout au long de l’entretien, ne coupe pas la parole au recruteur ou aux
-					autres candidats si tu passes un entretien collectif.</li>
-			</ul>
-
-			</p>
-		</div>
-
-		<div class="col-xs-12 col-sm-12 col-lg-12">
-			<h3 style="color:rgba(0,0,0,1)">Conseil 6 : Être créactif pour se démarquer</h3>
-			<p class="lead text-justify" style="font-size:medium;">
-				Les recruteurs vont voir passer beaucoup de candidats avec des profils parfois similaires au tien.
-				<br>
-				Une seule chose pourra te démarquer des autres : <strong>ta personnalité</strong>. Montre donc au
-				recruteur ce qui fait qui tu es.
-				Soit dynamique pendant l’entretien, profite de chacune des opportunités proposées par le recruteur
-				pour lui montrer une nouvelle facette de toi-même. Mais n’oublie pas le conseil n°5.<br>
-				Tu peux par exemple lui proposer un CV sous une forme différente de celle habituelle.
-			</p>
-		</div>
 
 	</div>
 </div>
