--- a/apps/conseils/front/templates/conseils.html
+++ b/apps/conseils/front/templates/conseils.html
@@ -11,14 +11,15 @@
 
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<p class="lead text-justify" style="font-size:medium;">Le Forum Est-Horizon est une sérieuse opportunité
+				<p class="lead text-justify" style="font-size:medium;" id="cv">Le Forum Est-Horizon est une sérieuse
+					opportunité
 					d’entrer du bon pied dans le monde professionnel. Afin d’en profiter au maximum, n’oublie pas de te
 					préparer avant le jour J. Un étudiant préparé montre un sérieux et des capacités d’anticipation non
 					négligeables pour une entreprise cherchant des stagiaires ou de jeunes employés. Pour t’aider dans
 					ta préparation, voici une checklist en 6 points :</p>
 				<br>
-				<h3 style="color:rgba(0,0,0,1)">Conseil 1 : Le CV, le ticket d’entrée dans le monde professionnel<span
-						class="text-muted"> </span></h3>
+				<h3 style="color:rgba(0,0,0,1)">Conseil 1 : Le CV, le ticket d’entrée dans le monde
+					professionnel<span class="text-muted"> </span></h3>
 				<p class="lead text-justify" style="font-size:medium;">
 					Pour que ton CV retienne l’attention des recruteurs, il doit tout d’abord être correct sur le fond
 					et la forme : sur une page, sans fautes d’orthographe, avec du contenu juste et pertinent concernant
@@ -96,7 +97,7 @@
 				</p>
 			</div>
 
-			<div class="col-xs-12 col-sm-12 col-lg-12" id="cv">
+			<div class="col-xs-12 col-sm-12 col-lg-12">
 				<h3 style="color:rgba(0,0,0,1)">Conseil 6 : Être créactif pour se démarquer</h3>
 				<p class="lead text-justify" style="font-size:medium;">
 					Les recruteurs vont voir passer beaucoup de candidats avec des profils parfois similaires au tien.
