--- a/apps/programme/front/templates/espace_etudiants.html
+++ b/apps/programme/front/templates/espace_etudiants.html
@@ -272,7 +272,7 @@
 
 <div class="article art-typ10">
   <h2 class="featurette-heading">
-    Plus d'info sur les conférences<span class="text-muted"> </span>
+    Plus d'infos sur les conférences<span class="text-muted"> </span>
   </h2>
 </div>
 
