--- a/apps/inscription-cv/front/templates/inscription.html
+++ b/apps/inscription-cv/front/templates/inscription.html
@@ -1,55 +1,65 @@
 <!--  =====================================================================	-->
-<!-- 		ARTICLES 														-->													 
+<!-- 		ARTICLES 														-->
 <!--  =====================================================================	-->
 
 <!--  ---------------------------------------------------------------------	-->
-<!-- 		ARTICLE 1 :connexion											-->													 
+<!-- 		ARTICLE 1 :connexion											-->
 <!--  ---------------------------------------------------------------------	-->
-		<div class="article" style="padding-top : 10%;">
-		<div class="container marketing">
-			<div class="row featurette">
-				<div class="col-md-12">
-				  <h2 class="featurette-heading">Déposer un CV<span class="text-muted"> </span></h2>
+<div class="article" style="padding-top : 10%;">
+	<div class="container marketing">
+		<div class="row featurette">
+			<div class="col-md-12">
+				<h2 class="featurette-heading">Déposer un CV<span class="text-muted"> </span></h2>
+			</div>
+			<div class="col-md-12">
+				<div class="col-md-12 center-block">
+					<p align="center"> En déposant ton CV ici, tu candidates pour obtenir un entretien privilégié avec
+						une entreprise présente au Forum
+						Est-Horizon. L’équipe organisatrice du Forum étudiera ta candidature et proposera à l’entreprise
+						les profils les mieux
+						adaptés à sa demande actuelle.</p>
+					<p align="center">Pour profiter de tous ces services merci de remplir le formulaire ci-dessous.</p>
+					<?php if (True): ?>
 				</div>
-				<div class="col-md-12">
-						<div class="col-md-12 center-block">
-							<p align="center"> Cette page permet à tout étudiant étant inscrit au Forum Est-Horizon de déposer son CV. Dans le cas où vous ne seriez pas inscrit, vous pouvez le faire ici : <a href=http://www.est-horizon.com/inscription/>INSCRIPTION</a>. En déposant votre CV sur notre site, vous pourrez profiter pleinement de l'application du Forum Est-Horizon. En effet, celle-ci permet de générer un QR-Code que les entreprises présentes lors du forum pourront scanner afin de recevoir votre CV au format PDF. Votre CV sera aussi, si vous le souhaitez, corrigé par iQuesta qui vous le renverra par e-mail avec ses conseils personnalisés.</p>
-							<p align="center">Pour profiter de tous ces services merci de remplir le formulaire ci-dessous.</p> 
-						<?php if (True): ?>
+				<br /><br />
+				<div class="col-md-12 left-block">
+					<form method="post" enctype="multipart/form-data" class="frm" action="">
+						<div class="form-group">
+							<label for="InputEmail1">Adresse e-mail </label>
+							<input type="email" class="form-control" id="InputEmail1" name="mail" placeholder="E-mail"
+								required><br />
+							<label for="InputCv"> Votre CV sous format PDF (taille maximale: 1Mo).Déposer un CV vous
+								permettra d'utiliser pleinement les fonctionnalités de l'application.</label>
+							<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
+							<input type="file" id="InputCv" name="cv" placeholder="CV" required /><br /><br />
 						</div>
-						<br/><br/>
-						<div class="col-md-12 left-block">
-							<form method="post" enctype="multipart/form-data" class="frm" action="">
-							  <div class="form-group">
-								<label for="InputEmail1" >Adresse e-mail </label>
-								<input type="email" class="form-control" id="InputEmail1" name= "mail" placeholder="E-mail" required><br/>
-							  <label for="InputCv"> Votre CV sous format PDF (taille maximale: 1Mo).Déposer un CV vous permettra d'utiliser pleinement les fonctionnalités de l'application.</label>
-							  	<input type="hidden" name="MAX_FILE_SIZE" value="1048576" />
-							  	<input type="file"  id="InputCv" name= "cv" placeholder="CV" required/><br/><br/>
-							  </div>
-							  <button type="submit" class="btn btn-secondary center-block">Envoyer</button> <br/><br/>
-							</form>	
-						</div>
-						<p align="center"> Pour profiter des services de iQuesta vous pouvez aussi vous rendre à l'adresse suivante : <a href=http://www.iquesta.com/correction--Forum-Est-Horizon-2017-55.html>www.iquesta.com</a> .</p>				
-						<?php else: ?>
-						<div class="col-md-12 center-block">
-							<center><p align="center">Les inscriptions ne sont pas encore ouvertes.</p></center>
-						</div>
-						<?php endif; ?>											
-			
+						<button type="submit" class="btn btn-secondary center-block">Envoyer</button> <br /><br />
+					</form>
 				</div>
+				<p align="center"> Pour profiter des services de iQuesta vous pouvez aussi vous rendre à l'adresse
+					suivante : <a
+						href=http://www.iquesta.com/correction--Forum-Est-Horizon-2017-55.html>www.iquesta.com</a> .</p>
+				<?php else: ?>
+				<div class="col-md-12 center-block">
+					<center>
+						<p align="center">Les inscriptions ne sont pas encore ouvertes.</p>
+					</center>
+				</div>
+				<?php endif; ?>
 
-			 </div>
+			</div>
+
 		</div>
-		</div>
-	
+	</div>
+</div>
+
 <!--  =====================================================================	-->
-<!-- 		JAVASCRIPT 														-->													 
+<!-- 		JAVASCRIPT 														-->
 <!--  =====================================================================	-->
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
-		<script src="bootstrap/js/bootstrap.js"></script>
-		<!-- IE10 viewport Windows 8 bug -->
-		<script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>	
-		<script src="bootstrap/js/scroll_animate.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="bootstrap/js/bootstrap.js"></script>
+<!-- IE10 viewport Windows 8 bug -->
+<script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="bootstrap/js/scroll_animate.js" type="text/javascript"></script>
