--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -1,6 +1,7 @@
 <script src="/apps/accueil/front/js/window_height.js" type="text/javascript"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G9JD9QGM1W"></script>
+<link type="text/css" rel="stylesheet" href="../css/accueil.css">
 <script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag() { dataLayer.push(arguments); }
@@ -227,18 +228,13 @@
 				</p>
 				</p>
 
+				
 
 
 
 
 
-
-
-
-
-
-
-
+				
 
 			</div>
 		</div>
