--- a/apps/programme/front/templates/espace_etudiants.html
+++ b/apps/programme/front/templates/espace_etudiants.html
@@ -98,7 +98,7 @@
             il y aura
             essentiellement des représentants des ressources humaines avec qui les étudiants pourront discuter d’un
             sujet
-            particulier dans le but d’obtenir un stage. [insérer salles et horaires]
+            particulier dans le but d’obtenir un stage.
           </p>
         </div>
       </div>
@@ -123,9 +123,7 @@
             représentants des
             entreprises. Nous avons à cœur d’organiser ces rencontres afin de garantir une totale transparence entre les
             étudiants
-            et les recruteurs, et ce lors d’un moment convivial autour de boissons mises à votre disposition. [insérer
-            salles et
-            horaire]
+            et les recruteurs, et ce lors d’un moment convivial autour de boissons mises à votre disposition.
           </p>
         </div>
       </div>
@@ -181,8 +179,7 @@
             Dynamique
             Études et Emploi avec un Handicap) qui a pour rôle de coacher des étudiants en situation de handicap afin
             qu’ils
-            puissent être guidés à travers leur projet professionnel. Cette année, il aura lieu de 13h à 15h en [insérer
-            salle].
+            puissent être guidés à travers leur projet professionnel.
           </p>
         </div>
       </div>
@@ -213,8 +210,7 @@
             CV.
 
           </p>
-          [insérer
-          salle et horaire]
+
 
         </div>
       </div>
@@ -240,7 +236,7 @@
             permet de réaliser gratuitement des clichés d’excellente qualité pour embellir vos CV. Rendez-vous sur leur
             stand le
             jour de l'événement.
-          </p> [insérer salle et horaire]
+          </p>
         </div>
       </div>
     </div>
