--- a/apps/accueil/front/css/accueil.css
+++ b/apps/accueil/front/css/accueil.css
@@ -16,7 +16,7 @@ body {
   font-size: 1.6rem;
   font-family: "Source Sans Pro", sans-serif;
   color: #383838;
-  background-color: #f8f8f8;
+  background-color: #71ceaf;
 }
 
 a {
