--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -164,77 +164,18 @@
 					étudiants viennent de
 					toutes les filières: ingénierie, commerce, management…	
 				
-				<h3>Historique du Forum Est-Horizon ces dernières années:</h3>
-				<h4 class="lead text-justify">2014 : édition présidée par Vincent Laurent</h4>
-				<p class="lead text-justify">Après une édition dans la galerie des Mines de Nancy, l’équipe de Vincent a
-					décidé de donner un
-					souffle nouveau au Forum
-					en l’organisant au Centre Prouvé. C’était un pari risqué car cela doublait pratiquement les dépenses
-					par rapport à
-					l’édition précédente, on les remercie maintenant car c’est en partie grâce à eux que nous organisons
-					notre Forum au
-					Centre Prouvé. Il y a eu cette année 34 entreprises participantes et un peu plus de 700 visiteurs.
-				</p>
-				<h4 class="lead text-justify">2015 : édition présidée par Théo Michel</h4>
-				<p class="lead text-justify">L’équipe de Théo a également décidé d’organiser son édition au Centre
-					Prouvé de Nancy. La grande
-					nouveauté de leur année
-					était l’association avec Géologia, le forum de l’ENSG. Le Forum Est-Horizon a réuni 41 entreprises
-					et
-					1000 visiteurs, et
-					ces chiffres sont pratiquement doublés en prenant l’événement global Géologia-Forum Est-Horizon.
-				</p>
-				<h4 class="lead text-justify">2016 : édition présidée par Corentin Vermeulen-Couvelard</h4>
-				<p class="lead text-justify">Le Forum a décidé de suivre la ligne de conduite insufflée par les deux
-					éditions précédentes en restant
-					au Centre Prouvé
-					et en poursuivant l’association avec Geologia. L’ENSEM s’est également jointe au projet. Cette
-					année-là,
-					le Forum est
-					parvenu à rassembler 55 entreprises et un plus de 1000 visiteurs.
-				</p>
+					<div class="col-xs-12 col-sm-12 col-lg-12">
+						<h2 class="featurette-heading">Historique du Forum Est-Horizon<span class="text-muted"> </span>
+						</h2>
 
-				<h4 class="lead text-justify">2017 : édition présidée par Nicolas Raux</h4>
-				<p class="lead text-justify">Changement majeur, après deux ans de collaboration, le Forum Est-Horizon
-					est redevenu indépendant. Cette
-					édition a reçu
-					beaucoup de retours positifs notamment grâce à la présence d’Arnaud Montebourg en tant que
-					conférencier,
-					cela a été une
-					belle réussite pour cette édition, qui a attiré 1500 visiteurs.
-				</p>
-				<h4 class="lead text-justify">2018 : édition présidée par Elyès Chenik</h4>
-				<p class="lead text-justify">Dans la lignée de l’édition précédente. La recherche d'entreprises s’est
-					intensifiée et le Forum est
-					parvenu à réunir
-					plus de 60 entreprises, le plus grand nombre depuis quelques années. Légère diminution par rapport à
-					l’édition
-					précédente, le Forum a tout de même attiré environ 1200 personnes.
-				</p>
-				<h4 class="lead text-justify">2019 : édition présidée par Eulalie Charles-Lethon</h4>
-				<p class="lead text-justify">Toujours organisé au centre Prouvé, le Forum Est-Horizon perdure et réunit
-					cette fois encore plus de
-					1200 visiteurs pour
-					55 entreprises participantes à l’édition.
-				</p>
-				<h4 class="lead text-justify">2020 : édition présidée par Johann Cochet</h4>
-				<p class="lead text-justify">Malgré une grande préparation pour l’organisation de l’événement au Centre
-					Prouvé une année encore, et ce dû aux
-					conditions sanitaires tout à fait exceptionnelles, le Forum Est-Horizon s’est tenu entièrement en
-					ligne sur la
-					plateforme Seekube. Pour autant, un grand nombre de conférences a été donné et une grande partie des
-					ateliers ont été
-					maintenus pour cette édition. Qui, malgré la situation, a réussi à réunir environ 500 participants
-					et 40 entreprises.
-				</p>
+
+				<br>
+				<img class="featurette-image img-responsive center-block margin-TB20 animation-element growing" style="height : 300px;"
+					src="/apps/accueil/front/images/slides/frise chrono version 2.PNG" >
 				
-
+				<br>
 				
-
-
-
-
-				
+		
 
 			</div>
 		</div>
