--- a/apps/galerie/front/templates/galerie.html
+++ b/apps/galerie/front/templates/galerie.html
@@ -98,7 +98,7 @@
 					echo '<p>Pour encourager et soutenir les <strong>vocations</strong> de techniciennes et d’ingénieures, une table ronde est organisée par l’association “<strong>Elles Bougent</strong>” et le Forum Est-Horizon. Des marraines issues du monde scientifique témoignent de leur parcours professionnel et rencontrent lycéen(ne)s et étudiant(e)s pour partager leur passion et casser les stéréotypes.</p>';
 				}
 				else{
-					echo '<p>L’édition 2020, la 37e, se tiendra du <strong>8 au 10 décembre</strong> dans un format 100% virtuel sur la plateforme en ligne Seekube.</p>';
+					echo '<p>L’édition 2021, la 38e, se tiendra le <strong>2 décembre</strong> dans un format mêlant présentiel au Centre Prouvé et virtuel via la plateforme Seekube.</p>';
 				}
 				
 				//echo '<p>'.file_get_contents($vecteur[2]).'</p>';
