--- a/apps/concoursprojets/front/templates/concours_projets.html
+++ b/apps/concoursprojets/front/templates/concours_projets.html
@@ -44,27 +44,27 @@ h2.featurette-heading{
 
 	<ul class="menu-interne"> 
 		<li class="menu-elt">
-			<a class="menu-lien" href="#presentation">Présentation</a>
+			<a class="menu-lien" href="#préambule">Présentation</a>
 		</li>
 		
 		<li class="menu-elt">
-			<a class="menu-lien" href="#modalites">Modalités</a>
+			<a class="menu-lien" href="#conditions de participation">Conditions</a>
 		</li>
 		
 		<li class="menu-elt">
-			<a class="menu-lien" href="#prix">Récompenses</a>
+			<a class="menu-lien" href="#modalités de participations">Modalités</a>
 		</li>
 		
 		<li class="menu-elt">
-			<a class="menu-lien" href="#format">Format</a>
+			<a class="menu-lien" href="#modalités de sélection des lauréats">Sélection</a>
 		</li>
 		
 		<li class="menu-elt">
-			<a class="menu-lien" href="#inscription">Comment s'inscrire</a>
+			<a class="menu-lien" href="#données à caractère personnel">Données à caractère personnel</a>
 		</li>
 		
 		<li class="menu-elt">
-			<a class="menu-lien" href="#calendrier">Calendrier</a>
+			<a class="menu-lien" href="#interprétation">Interprétation</a>
 		</li>
 		
 		<li class="menu-elt">
@@ -78,10 +78,10 @@ h2.featurette-heading{
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Présentation<span class="text-muted"> </span></h2>
+				<h2 class="featurette-heading">Préambule<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-						Le Forum Est-Horizon, avec l’aide du PEEL organise un concours de projets. C’est l’occasion idéale de venir présenter vos idées et vos travaux innovants devant un jury de spécialiste de l'entrepreneuriat et du monde de la start-up. 
+						Le Concours de Projets organisé lors du Forum Est Horizon a pour objectif de permettre aux étudiants de venir présenter leurs idées et leurs travaux innovants à un jury composé de personnes familières au monde de la start-up et de l’entreprenariat. Les meilleurs projets sont récompensés par un chèque permettant aux étudiants de poursuivre l’avancement de leurs travaux. Le Concours de Projets du Forum Est-Horizon est organisé en collaboration avec le Pôle entrepreneuriat étudiant de Lorraine (PEEL).
 					</p>
 			
 				</div>
@@ -96,11 +96,16 @@ h2.featurette-heading{
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Modalités<span class="text-muted"> </span></h2>
+				<h2 class="featurette-heading">Conditions de participation<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-Pour participer, vous devez être <strong>étudiant</strong> ou <strong>étudiant entrepreneur</strong>. Vous pouvez défendre votre projet seul ou en groupe, le nombre de présentateurs par projet n’est pas limité.<br>
-Lors de l’ouverture des inscriptions, vous choisissez de vous présenter <strong>dans l’une des 2 catégories proposées</strong> : <em>Projet Émergent</em> ou <em>Projet Avancé</em>. Un projet sera désigné gagnant par le jury dans chacune des catégories.
+						Le concours est ouvert aux <strong>étudiants</strong>, <strong>étudiants entrepreneurs</strong> ainsi qu’aux <strong>groupe d'étudiants</strong>.
+						Le concours comporte deux catégories :<br><br>
+						- <strong>« Projet Émergent » </strong>: les porteurs du projet ont une idée qui commence à germer et ont déjà
+						effectué quelques recherches autour de cette idée.<br><br>
+						-<strong> « Projet Avancé » </strong>: les porteurs du projet ont concrétisé leur idée sous forme de prototypes,
+						réalisations ou expérimentations multiples...
+
 					</p>
 			
 				</div>
@@ -115,11 +120,25 @@ Lors de l’ouverture des inscriptions, vous choisissez de vous présenter <stro
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Récompenses<span class="text-muted"> </span></h2>
+				<h2 class="featurette-heading">Modalités de participation<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-						Le lauréat de la catégorie “Projet Émergent” se verra offrir une récompense d’un montant de 500€.<br> Celui de la catégorie “Projet Avancé” recevra un chèque de 1000€.
+						<strong>1) </strong> Les inscriptions au jeu concours s’effectuent uniquement par voie électronique.<br>
+						<strong>2) </strong> Remplir le document "Présentation du projet" ci-dessous. <br>
+						<p> <a href="projetforum.pdf">Télécharger le document</a></p>
 
+				
+					<p class="lead text-justify">
+						<strong>3) </strong> Lors de l’ouverture des inscriptions, les participants choisissent de participer à <strong>l’une des 2
+							catégories proposées</strong> : Projet Émergent ou Projet Avancé. Un seul projet sera désigné gagnant par
+							le jury dans chacune des catégories.<br>
+						<strong>4) </strong> Pour être inscrit, chaque participant/équipe doit envoyer un mail, lors de l’ouverture des
+							inscriptions, à l’adresse concoursprojet.esthorizon@gmail.com en indiquant en objet “Concours de
+							Projet 2021”, et envoyer en pièce jointe le document « Présentation du projet » rempli et <strong>sous format pdf</strong>.
+							 Un mail de confirmation validera l’inscription au concours.<br>
+						<strong>5) </strong> En accord avec le paragraphe suivant, les candidats sélectionnés pour participer au concours devront
+							envoyer le livrable à la même adresse mail, avant le 1er décembre. Le livrable sera composé d’une
+							présentation de 5 diapositives maximum <strong>sous format pdf</strong>.
 					</p>
 			
 				</div>
@@ -134,23 +153,44 @@ Lors de l’ouverture des inscriptions, vous choisissez de vous présenter <stro
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Format<span class="text-muted"> </span></h2>
+				<h2 class="featurette-heading"> Modalités de sélection des lauréats<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-Vous présenterez votre projet en <strong>7 minutes</strong> avec comme support visuel une seule diapositive sur laquelle doivent obligatoirement apparaître les éléments suivants:
-<ul>
-<li>nom et visuel(logo) sur projet</li>
-<li>Nom des participants et coordonnées</li>
-</ul>
-Outre ces consignes à respecter, vous êtes libres de remplir la diapositive comme bon vous semble, afin de mettre en valeur les éléments essentiels de votre projet.<br>
-Au cours de votre prestation, le jury sera particulièrement attentif aux points suivants :<br><br>
-<ul>
-<li>   <strong>La clarté</strong> de la présentation </li>
-<li>      <strong>La problématique</strong> dans laquelle s’inscrit le projet (à quels besoins celui-ci répond-il ?)</li>
-<li>     La réflexion autour du <strong>modèle économique</strong>, et du <strong>public visé</strong> par le projet (à qui le projet s’adresse-t-il, comment comptez-vous le financer ou l’avez-vous financé ?)</li>
-</ul>
+						<div class="col-xs-12 col-sm-12 col-lg-12">
+							<h3 style="color:rgba(0,0,0,1)">Phase 1 : Inscription au concours</h3>
+							
+								<p class="lead text-justify">
+						Les inscriptions seront ouvertes du 13 septembre 2021 au 1er novembre 2021, les dépôts des
+						projets et participations se feront via l’envoi d’un mail à l’adresse citée dans l’article 3.4, aucun
+						dossier ne pourra être modifié après cette date, et chaque dossier sera pris en l’état au titre de
+						participation au concours.<br><br>
+						<strong>N.B.</strong>: Dans l’éventualité d’un trop grand nombre de candidatures, le Forum Est-Horizon s’accorde le
+						droit d’opérer une sélection de projets en amont du concours.<br><br>
 
+					
+							<h3 style="color:rgba(0,0,0,1)">Phase 2 : Participation au concours</h3>
+							
+								<p class="lead text-justify">
+						Le candidat sélectionné devra présenter son projet devant un jury le 2 décembre 2021 au
+						centre Prouvé si le Forum Est-Horizon a lieu en présentiel, sinon via téléconférence.<br>
+						Le candidat disposera de 7 minutes de présentation. Au cours de sa prestation, le jury sera
+						particulièrement attentif aux points suivants :<br>
+						- La clarté de la présentation<br> 
+						- La problématique dans laquelle s’inscrit le projet (à quels besoins celui-ci répond-il ?)<br>
+						- La réflexion autour du modèle économique, et du public visé par le projet (à qui le projet
+							s’adresse-t-il, comment comptez-vous le financer ou l’avez-vous financé ?)<br><br>
+					
+					
+						<h3 style="color:rgba(0,0,0,1)">Phase 3 : Sélection des vainqueurs</h3>
+						
+							<p class="lead text-justify">
+						L’annonce des lauréats de chaque catégorie se fera dans la même journée, une fois que tous
+						les candidats auront présenté leur projet.<br><br>
+						Le Forum Est-Horizon offre <strong>500€</strong> au lauréat de la catégorie « Projet Émergent », et <strong>1000€</strong> à
+						celui de la catégorie « Projet Avancé ». Un prix « coup de cœur Rotary » sera délivré à un projet
+						sous une forme à déterminer.
 
+							
 					</p>
 			
 				</div>
@@ -165,20 +205,14 @@ Au cours de votre prestation, le jury sera particulièrement attentif aux points
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Comment s'inscrire<span class="text-muted"> </span></h2>
+				<h2 class="featurette-heading">Données à caractère personnel<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-<ol>
-<li>     Envoyer un mail à l’adresse concoursprojet.esthorizon@gmail.com en précisant le nom de tous les participants au projet et le nom du projet.</li>
-<li>     Indiquer en objet du mail “Concours de projets 2020”. Vous recevrez un mail confirmant votre inscription.</li>
-<li>Avant la date butoir du <strong>2 novembre</strong>, envoyer à cette même adresse le lien WeTransfer sur lequel vous aurez déposé les <strong>livrables</strong> :
-    <ul>
-<li>      L’unique diapositive de présentation de votre projet,</li> 
-<li>        Une présentation de l’équipe portant le projet (environ 100 mots)</li> 
-<li>      Une présentation du projet (environ 100 mots)</li> 
-</ul>
-</li>
- </ol>
+						Dans le cadre de leur participation au Concours Projets Est-Horizon, les candidats autorisent le
+Forum Est-Horizon à récolter et conserver des informations nominatives personnelles en signant le
+document « Présentation du projet ». La communication de ces données est volontaire et les
+informations sont exclusivement destinées au Forum Est-Horizon et aux partenaires du Concours
+Projets Est-Horizon.
 
 
 					</p>
@@ -195,15 +229,12 @@ Au cours de votre prestation, le jury sera particulièrement attentif aux points
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Calendrier<span class="text-muted"> </span></h2>
+				<h2 class="featurette-heading">Interprétation<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-	<dl class="dl-horizontal">
-        	<dt>7 septembre 2020</dt> <dd>Ouverture des inscriptions par mail.</dd>
-        	<dt>29 octobre 2020</dt> <dd>Clôture des inscriptions. <em>Aucune candidature ne sera acceptée après cette date !</em></dd>
-        	<dt>2 novembre 2020</dt> <dd>Date butoir de remise des livrables par mail, via un lien WeTransfer</dd>
-        	<dt>19 novembre 2020</dt> <dd>(13h-15h30) : Concours de projets</dd>
-	</dl>
+						Toute question d’application ou d’interprétation du règlement, ou toute question imprévue qui
+viendrait à se poser, sera tranchée souverainement, selon la nature de la question, par le Concours
+Projets Est-Horizon.
 					</p>
 			
 				</div>
