--- a/apps/concoursprojets/front/templates/espace_etudiants.html
+++ b/apps/concoursprojets/front/templates/espace_etudiants.html
@@ -199,7 +199,7 @@
 </div>
 
 <!--  ---------------------------------------------------------------------	-->
-<!-- 		ARTICLE 3 : Concours entrepreneuriat							-->
+<!-- 		ARTICLE 3 : Concours de projets							-->
 <!--  ---------------------------------------------------------------------	-->
 
 <div class="article art-typ10">
@@ -207,7 +207,7 @@
     <div class="row featurette">
       <div class="col-xs-12 col-sm-12 col-lg-12">
         <h2 class="featurette-heading">
-          Concours d'entrepreneuriat<span class="text-muted"> </span>
+          Concours de projets <span class="text-muted"> </span>
         </h2>
       </div>
       <div class="col-md-7">
@@ -243,13 +243,13 @@
             >
               <p>500€</p>
             </div>
-            <div class="col-sx-12 center-block">Projet coup de coeur</div>
+            <div class="col-sx-12 center-block">Projet coup de coeur Rotary</div>
           </div>
           <div class="col-md-6">
             <div
               class="col-sx-12 icon-figures-2 center-block animation-element bottom_to_top"
             >
-              <p>500€</p>
+              <p>1 000€</p>
             </div>
             <div class="col-sx-12 center-block">Projets déjà avancés</div>
           </div>
