--- a/apps/programme/front/templates/espace_etudiants.html
+++ b/apps/programme/front/templates/espace_etudiants.html
@@ -281,7 +281,7 @@
     <div class="row featurette">
       <div class="col-xs-12 col-sm-12 col-lg-12">
         <h2 class="featurette-heading">
-          Concours d'entrepreneuriat<span class="text-muted"> </span>
+          Concours de Projets<span class="text-muted"> </span>
         </h2>
       </div>
       <div class="col-md-7">
