--- a/apps/concoursprojets/front/templates/concours_projets.html
+++ b/apps/concoursprojets/front/templates/concours_projets.html
@@ -47,27 +47,27 @@
 
 <ul class="menu-interne">
 	<li class="menu-elt">
-		<a class="menu-lien" href="#préambule">Présentation</a>
+		<a class="menu-lien" href="#preambule">Présentation</a>
 	</li>
 
 	<li class="menu-elt">
-		<a class="menu-lien" href="#conditions de participation">Conditions</a>
+		<a class="menu-lien" href="#conditions">Conditions</a>
 	</li>
 
 	<li class="menu-elt">
-		<a class="menu-lien" href="#modalités de participations">Modalités</a>
+		<a class="menu-lien" href="#modalite">Modalités</a>
 	</li>
 
 	<li class="menu-elt">
-		<a class="menu-lien" href="#modalités de sélection des lauréats">Sélection</a>
+		<a class="menu-lien" href="#selection">Sélection</a>
 	</li>
 
 	<li class="menu-elt">
-		<a class="menu-lien" href="#données à caractère personnel">Données à caractère personnel</a>
+		<a class="menu-lien" href="#personaldata">Données à caractère personnel</a>
 	</li>
 
 	<li class="menu-elt">
-		<a class="menu-lien" href="#interprétation">Interprétation</a>
+		<a class="menu-lien" href="#interpretation">Interprétation</a>
 	</li>
 
 	<li class="menu-elt">
@@ -77,7 +77,7 @@
 
 
 
-<div class="article " id="presentation">
+<div class="article " id="preambule">
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
@@ -100,7 +100,7 @@
 	</div>
 </div>
 
-<div class="article " id="modalites">
+<div class="article " id="conditions">
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
@@ -127,7 +127,7 @@
 	</div>
 </div>
 
-<div class="article " id="prix">
+<div class="article " id="modalite">
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
@@ -167,7 +167,7 @@
 	</div>
 </div>
 
-<div class="article " id="format">
+<div class="article " id="selection">
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
@@ -226,7 +226,7 @@
 		</div>
 	</div>
 
-	<div class="article " id="inscription">
+	<div class="article " id="personaldata">
 		<div class="container marketing">
 			<div class="row featurette">
 				<div class="col-xs-12 col-sm-12 col-lg-12">
@@ -253,7 +253,7 @@
 		</div>
 	</div>
 
-	<div class="article " id="calendrier">
+	<div class="article " id="interpretation">
 		<div class="container marketing">
 			<div class="row featurette">
 				<div class="col-xs-12 col-sm-12 col-lg-12">
