--- a/apps/programme/front/templates/espace_etudiants.html
+++ b/apps/programme/front/templates/espace_etudiants.html
@@ -285,7 +285,7 @@
       <div class="col-md-7">
         <div class="col-md-12">
           <p class="lead text-justify">
-            Le Concours de Projets organisé lors du Forum Est Horizon a pour objectif de permettre aux étudiants de
+            Le Concours de Projets organisé lors du Forum Est-Horizon a pour objectif de permettre aux étudiants de
             venir présenter
             leurs idées et leurs travaux innovants à un jury composé de personnes familières au monde de la start-up et
             de
