--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -150,8 +150,7 @@
 				<p class="lead text-justify">
 
 				<p class="lead text-justify">Le Forum Est-Horizon (FEH) est une association étudiante de l’École des
-					Mines de Nancy. [Mines de Nancy cliquable et
-					renvoie vers leur site] Depuis 1984, elle organise chaque année l'évènement Forum Est-Horizon, un
+					Mines de Nancy. Depuis 1984, elle organise chaque année l'évènement Forum Est-Horizon, un
 					des plus grands salons
 					de rencontres professionnelles entre étudiants et entreprises du Grand Est. Ce forum n’est pas
 					uniquement destiné aux
