--- a/apps/conseils/front/templates/conseils.html
+++ b/apps/conseils/front/templates/conseils.html
@@ -6,7 +6,7 @@
 
 <div class="article art-typ4">
 	<div class="container marketing">
-		<h1 class="featurette-heading">Le guide de l'astucieux<span class="text-muted"> </span></h1>
+		<h1 class="featurette-heading">Guide de préparation au Forum<span class="text-muted"> </span></h1>
 
 
 		<div class="row featurette">
