--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -247,7 +247,7 @@
 
 				<div class="col-xs-12">
 					<div class="col-xs-12">
-						<h4 style="text-transform : uppercase;">Partenaires Forum</h4>
+						<!-- <h4 style="text-transform : uppercase;">Partenaires Forum</h4> -->
 					</div>
 				</div>
 
