--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -165,20 +165,25 @@
 					toutes les filières: ingénierie, commerce, management…
 
 
-				<div class="col-xs-12 col-sm-12 col-lg-12">
-					<h2 class="featurette-heading">Historique du Forum Est-Horizon<span class="text-muted"> </span>
-					</h2>
 
-
-
-
-
-
-
-
-
-				</div>
 			</div>
+		</div>
+		<div class="col-xs-12 col-sm-12 col-lg-12">
+			<h2 class="featurette-heading">Historique du Forum Est-Horizon<span class="text-muted"> </span>
+			</h2>
+
+			<br>
+			<img class="featurette-image img-responsive center-block margin-TB20 animation-element growing"
+				style="height : 400px;" src="/apps/accueil/front/images/slides/frise chrono version 2.PNG">
+
+
+
+
+
+
+
+
+
 		</div>
 	</div>
 
