--- a/apps/concoursprojets/front/templates/concours_projets.html
+++ b/apps/concoursprojets/front/templates/concours_projets.html
@@ -137,7 +137,7 @@
 						<strong>1) </strong> Les inscriptions au concours s’effectuent uniquement par voie
 						électronique.<br>
 						<strong>2) </strong> Remplir le document "Présentation du projet" ci-dessous. <br>
-					<p> <a href="projetforum.pdf">Télécharger le document</a></p>
+					<p> <a href="/apps/concoursprojets/assets/projetforum.pdf">Télécharger le document</a></p>
 
 
 					<p class="lead text-justify">
