--- a/apps/equipe/front/templates/contacter.html
+++ b/apps/equipe/front/templates/contacter.html
@@ -5,55 +5,18 @@
 <!--  ---------------------------------------------------------------------	-->
 <!-- 		ARTICLE 1 : equipe												-->
 <!--  ---------------------------------------------------------------------	-->
-<!--
-		<div class="article" id="equipe">
-		<div class="container marketing">
-			<div class="row featurette">
-				<div class="col-xs-12 col-sm-12 col-lg-12">
-					 <h2 class="featurette-heading .featurette-heading-2">Notre équipe 2018<span class="text-muted"> </span></h2>
-				</div>	
-				<div class="col-xs-12 col-sm-12 col-lg-12" >
-						<?php /* compte le nombre de membres */ 
 
-								@$fp = fopen ("apps/contacter/front/images/membres/membres.txt",'rb');
-								
-								if (!$fp) 
-								{
-									echo "<p>Erreur d'ouverture de fichier</p>";
-								}
-								else {								
-									$nombre = 0;
-									while (!feof($fp)) // voir si la lecture du fichier et terminée 
-									{
-										$nombre++;
-										$membre = fgets($fp,999); //indispensable pour arreter la boucle
-									}
-									
-										echo "<p class='lead text-justify'>Depuis sa création, en 1984, le Forum Est-Horizon est une association gérée par une équipe soudée de jeunes bénévoles 
-										: 21 élèves ingénieurs de Mines Nancy mettent leurs compétences au service des entreprises pour préparer ce grand événement.</p>";	
-								}
-								fclose($fp);
-						?>
-				</div>
-				<div class="team-pic">
-				<img style="width:60%;height:auto;display:inline-block;float:left" src="../upload/group/2018.jpg"	/>
-                    <span style="position:relative;left:50px;border-bottom:1px solid red;width:35%;text-align:center;display:inline-block;">
-                        <h2 style="color:#484848">Contact</h1>
-                    </span>
-				</div>
-			</div>
-		</div>
-	</div>
-	-->
 <script src="https://www.google.com/recaptcha/api.js?hl=fr"></script>
 <style>
   #equipe {
     width: 100%;
     height: auto;
   }
+
   #equipe img {
     z-index: 0;
   }
+
   #equipe-content {
     background: white;
   }
@@ -72,6 +35,7 @@
     width: 100%;
     z-index: 1000;
   }
+
   #equipe #content {
     z-index: 900;
   }
@@ -109,6 +73,7 @@
     font-size: 40px;
     color: #505050;
   }
+
   #red-line {
     display: inline-block;
     width: 70px;
@@ -161,9 +126,7 @@
             <div style="display: inline-block">
               <span id="title">Informations</span>
               <br />
-              <span
-                style="width: 100%; text-align: center; display: inline-block"
-              >
+              <span style="width: 100%; text-align: center; display: inline-block">
                 <span id="red-line"></span>
               </span>
             </div>
@@ -199,36 +162,12 @@
             <br />
             <form action="envoimessage" method="POST">
               <input type="hidden" name="issent" />
-              <input
-                type="text"
-                name="name"
-                id="name"
-                placeholder="Nom & Prénom*"
-              /><br />
-              <input
-                type="text"
-                name="comp"
-                id="comp"
-                placeholder="Entreprise/Fonction*"
-              /><br />
-              <input
-                type="text"
-                name="mail"
-                id="mail"
-                placeholder="Adresse mail*"
-              /><br />
-              <input
-                type="text"
-                name="obj"
-                id="obj"
-                placeholder="Objet*"
-              /><br />
+              <input type="text" name="name" id="name" placeholder="Nom & Prénom*" /><br />
+              <input type="text" name="comp" id="comp" placeholder="Entreprise/Fonction*" /><br />
+              <input type="text" name="mail" id="mail" placeholder="Adresse mail*" /><br />
+              <input type="text" name="obj" id="obj" placeholder="Objet*" /><br />
               <textarea id="bod" name="bod" rows="7"></textarea><br />
-              <div
-                class="g-recaptcha"
-                id="obj"
-                data-sitekey="6LcMgmEUAAAAAHeQ3H6PZ2M2XUv02cmPj-U7B67_"
-              ></div>
+              <div class="g-recaptcha" id="obj" data-sitekey="6LcMgmEUAAAAAHeQ3H6PZ2M2XUv02cmPj-U7B67_"></div>
               <input type="submit" value="envoyer" />
             </form>
           </td>
@@ -255,11 +194,5 @@
 <!-- 		JAVASCRIPT 														-->
 <!--  =====================================================================	-->
 <script src="/bootstrap/js/scroll_animate.js" type="text/javascript"></script>
-<script
-  type="text/javascript"
-  src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-></script>
-<script
-  type="text/javascript"
-  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
