--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -248,26 +248,12 @@
 			</div>
 			<div class="row">
 
-				<div class="col-xs-12">
-					<div class="col-xs-12">
-						<h4 style="text-transform : uppercase;">Partenaires Forum</h4>
-					</div>
-				</div>
 
-				<div class="col-md-3 v-center">
-					<a href="http://www.studyrama-emploi.com">
-						<img src="/apps/partenaires/front/images/partenaires/studyrama.png" height="110"
-							class="img-responsive center-block margin-TB20 animation-element growing">
-					</a>
-				</div>
 
-				<div class="col-md-3 v-center">
-					<a href="https://choosemycompany.com">
-						<img src="/apps/partenaires/front/images/partenaires/cmcompany.png" height="110"
-							class="img-responsive center-block margin-TB20 animation-element growing">
-					</a>
 
-				</div>
+
+
+
 			</div>
 		</div>
 	</div>
@@ -379,7 +365,10 @@
 			</div>
 
 		</div>
+		<!-- ATTENTION NE PAS LAISSER DE LIGNE VIDE DANS PARTENAIRES.TXT MEME SI C'EST LA DERNIERE -->
 	</div>
+
+
 
 	<?php
 /* Essai lecture fichier txt */
