mines nancy cliquable et partenaires

--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -149,9 +149,9 @@
 				<h2 class="featurette-heading">Qui sommes-nous ?<span class="text-muted"> </span></h2>
 				<p class="lead text-justify">
 
-				<p class="lead text-justify">Le Forum Est-Horizon (FEH) est une association étudiante de l’École des
-					Mines de Nancy. [Mines de Nancy cliquable et
-					renvoie vers leur site] Depuis 1984, elle organise chaque année l'évènement Forum Est-Horizon, un
+				<p class="lead text-justify">Le Forum Est-Horizon (FEH) est une association étudiante de <a
+						href="https://mines-nancy.univ-lorraine.fr/">l’École des
+						Mines de Nancy</a>. Depuis 1984, elle organise chaque année l'évènement Forum Est-Horizon, un
 					des plus grands salons
 					de rencontres professionnelles entre étudiants et entreprises du Grand Est. Ce forum n’est pas
 					uniquement destiné aux
