--- a/apps/articles/front/templates/articles.html
+++ b/apps/articles/front/templates/articles.html
@@ -1,6 +1,5 @@
 <meta charset="utf-8" />
 <link rel="stylesheet" href="../css/profil.css" />
-
 <div class="article art-typ4">
   <div class="container">
     <div class="col-xs-12 col-sm-12 col-lg-12">
@@ -10,43 +9,34 @@
     </div>
 
     <section class="blog-cat mt-5 pb-5">
-      <div
-        class="fullbar-item w-100 cursor-pointer"
-        onclick="location.href='#'"
-      >
+      <div class="fullbar-item w-100 cursor-pointer" onclick="location.href='#'">
         <div class="container">
           <div class="row py-3 py-md-5 align-items-center border-top">
             <hr class="featurette-divider" />
             <div class="col-md-2">
               <p class="m-0 text-pink text-uppercase">
-                <strong>21 octobre 2020</strong>
+                <strong>2 octobre 2021</strong>
               </p>
             </div>
             <div class="col-md-5">
               <h3 class="feed-item-heading m-0 font-weight-800">
-                <a class="text-black" href="/seekube"
-                  >Forum Est-Horizon 2020 : du 8 au 10 décembre sur Seekube</a
-                >
+                <spân class="seekube">Forum Est-Horizon 2021 : le 2 décembre au Centre prouvé et le 16
+                  décembre
+                  sur Seekube</spân>
               </h3>
             </div>
-            <div class="col-md-5">
+            <div class=" col-md-5">
               <h3 class="feed-item-heading m-0 font-weight-800">
-                <a class="text-black" href="/seekube">
-                  <img
-                    class="featurette-image img-responsive center-block"
-                    style="height: 150px"
-                    src="/apps/seekube/front/images/seekube.png"
-                /></a>
+
+                <img class="featurette-image img-responsive center-block" style="height: 150px"
+                  src="/apps/seekube/front/images/seekube.png" />
               </h3>
             </div>
           </div>
         </div>
       </div>
 
-      <div
-        class="fullbar-item w-100 cursor-pointer"
-        onclick="location.href='#'"
-      >
+      <div class="fullbar-item w-100 cursor-pointer" onclick="location.href='#'">
         <div class="container">
           <div class="row py-3 py-md-5 align-items-center border-top">
             <hr class="featurette-divider" />
@@ -57,20 +47,15 @@
             </div>
             <div class="col-md-5">
               <h3 class="feed-item-heading m-0 font-weight-800">
-                <a class="text-black" href="/conseils"
-                  >Retrouvez notre guide des conseils pour une participation au
-                  Forum réussie.</a
-                >
+                <a class="text-black" href="/conseils">Retrouvez notre guide des conseils pour une participation au
+                  Forum réussie.</a>
               </h3>
             </div>
           </div>
         </div>
       </div>
 
-      <div
-        class="fullbar-item w-100 cursor-pointer"
-        onclick="location.href='#'"
-      >
+      <div class="fullbar-item w-100 cursor-pointer" onclick="location.href='#'">
         <div class="container">
           <div class="row py-3 py-md-5 align-items-center border-top">
             <hr class="featurette-divider" />
@@ -81,30 +66,22 @@
             </div>
             <div class="col-md-5">
               <h3 class="feed-item-heading m-0 font-weight-800">
-                <a class="text-black" href="/mesures"
-                  >Pour la santé de tous, le Forum Est-Horizon applique des
-                  mesures sanitaires strictes.</a
-                >
+                <a class="text-black" href="/mesures">Pour la santé de tous, le Forum Est-Horizon applique des
+                  mesures sanitaires strictes.</a>
               </h3>
             </div>
             <div class="col-md-5">
               <h3 class="feed-item-heading m-0 font-weight-800">
                 <a class="text-black" href="/mesures">
-                  <img
-                    class="featurette-image img-responsive center-block"
-                    style="height: 150px"
-                    src="/apps/mesures/front/images/mesures2.png"
-                /></a>
+                  <img class="featurette-image img-responsive center-block" style="height: 150px"
+                    src="/apps/mesures/front/images/mesures2.png" /></a>
               </h3>
             </div>
           </div>
         </div>
       </div>
 
-      <div
-        class="fullbar-item w-100 cursor-pointer"
-        onclick="location.href='#'"
-      >
+      <div class="fullbar-item w-100 cursor-pointer" onclick="location.href='#'">
         <div class="container">
           <div class="row py-3 py-md-5 align-items-center border-top">
             <hr class="featurette-divider" />
@@ -115,20 +92,15 @@
             </div>
             <div class="col-md-5">
               <h3 class="feed-item-heading m-0 font-weight-800">
-                <a class="text-black" href="/actionscov"
-                  >Le Forum Est-Horizon s'engage à faire un don de 1000€ au CHRU
-                  de Nancy pour soutenir les équipes médicales.</a
-                >
+                <a class="text-black" href="/actionscov">Le Forum Est-Horizon s'engage à faire un don de 1000€ au CHRU
+                  de Nancy pour soutenir les équipes médicales.</a>
               </h3>
             </div>
             <div class="col-md-5">
               <h3 class="feed-item-heading m-0 font-weight-800">
                 <a class="text-black" href="/actionscov">
-                  <img
-                    class="featurette-image img-responsive center-block"
-                    style="height: 150px"
-                    src="/images/v2/slides/coronavirusNB.png"
-                /></a>
+                  <img class="featurette-image img-responsive center-block" style="height: 150px"
+                    src="/images/v2/slides/coronavirusNB.png" /></a>
               </h3>
             </div>
           </div>
@@ -138,11 +110,5 @@
   </div>
 </div>
 
-<script
-  type="text/javascript"
-  src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-></script>
-<script
-  type="text/javascript"
-  src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
