--- a/apps/seekube/front/templates/seekube.html
+++ b/apps/seekube/front/templates/seekube.html
@@ -1,49 +1,55 @@
 <script src="/apps/accueil/front/js/window_height.js" type="text/javascript"></script>
 <style>
-	h3{
+	h3 {
 		text-align: center;
 	}
-	.gap{ 
-		width:100%; 
-		height:20px; 
-	} 
+
+	.gap {
+		width: 100%;
+		height: 20px;
+	}
 </style>
 <!--  =====================================================================	-->
-<!-- 		ARTICLES	 													-->													 
+<!-- 		ARTICLES	 													-->
 <!--  =====================================================================	-->
-		
+
 
 <!--  ---------------------------------------------------------------------	-->
-<!-- 		ARTICLE 1 :Actions Covid19 ?									-->													 
+<!-- 		ARTICLE 1 :Actions Covid19 ?									-->
 <!--  ---------------------------------------------------------------------	-->
-		<div class="article art-typ2" id="quisommesnous" style="center-block">
-		<div class="container marketing">
-		
-				<?php if (!empty($_SESSION['firmid'])): /*onglet pour les entreprises si connectées*/?>
-					<div class="gap"></div> 
-					<div class="gap"></div> 
-				<?php endif; ?>
-					
-				  <h2 class="featurette-heading">Forum Est-Horizon 2020 : du 8 au 10 décembre sur Seekube<span class="text-muted"> </span></h2>
-			<div class="row featurette">
-				<div class="col-md-6" >
-				<h2 ><div style="padding-top=150px;"> </div></h2>
-				  <a href="/apps/seekube/front/images/seekube.png"><img class="featurette-image img-responsive center-block" style="height : 156px;"  src="/apps/seekube/front/images/seekube.png" alt="Generic placeholder image"></a>
-				</div>
-				<div class="col-md-6">
-				  <p class="lead text-justify">
-						
-						
-					<h3>Le Forum Est-Horizon s'adapte</h3>
-					<div class="gap"></div> 
-                    <p class="lead text-justify">Suite aux dernières mesures gouvernementales, la 37ème édition du Forum Est-Horizon est maintenue dans un format 100% virtuel, organisée sur la plateforme Seekube.</p>
-                    <!-- <p class="lead text-justify">Afin d'éviter les risques de contamination, du gel hydroalcoolique sera à votre disposition lors de l'entrée au Centre Prouvé.</p> -->
-					</p>
-				
-				</div>
-			 </div>
+<div class="article art-typ2" id="quisommesnous" style="center-block">
+	<div class="container marketing">
+
+		<?php if (!empty($_SESSION['firmid'])): /*onglet pour les entreprises si connectées*/?>
+		<div class="gap"></div>
+		<div class="gap"></div>
+		<?php endif; ?>
+
+		<h2 class="featurette-heading">Forum Est-Horizon 2021 : 16 décembre sur Seekube<span class="text-muted"> </span>
+		</h2>
+		<div class="row featurette">
+			<div class="col-md-6">
+				<h2>
+					<div style="padding-top=150px;"> </div>
+				</h2>
+				<a href="/apps/seekube/front/images/seekube.png"><img
+						class="featurette-image img-responsive center-block" style="height : 156px;"
+						src="/apps/seekube/front/images/seekube.png" alt="Generic placeholder image"></a>
+			</div>
+			<div class="col-md-6">
+				<p class="lead text-justify">
+
+
+				<h3>Le Forum Est-Horizon innove</h3>
+				<div class="gap"></div>
+				<p class="lead text-justify">50% virtuelle</p>
+				<!-- <p class="lead text-justify">Afin d'éviter les risques de contamination, du gel hydroalcoolique sera à votre disposition lors de l'entrée au Centre Prouvé.</p> -->
+				</p>
+
+			</div>
 		</div>
-		</div>
-		
+	</div>
+</div>
+
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
