--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -173,8 +173,10 @@
 			</h2>
 
 			<br>
-			<img class="featurette-image img-responsive center-block margin-TB20 animation-element growing"
-				style="height : 400px;" src="/apps/accueil/front/images/slides/frise chrono version 2.PNG">
+			<a href="/apps/accueil/front/images/slides/frise chrono version 2.PNG">
+				<img class="featurette-image img-responsive center-block margin-TB20 animation-element growing"
+					style="height : 400px;" src="/apps/accueil/front/images/slides/frise chrono version 2.PNG">
+			</a>
 
 
 
