--- a/apps/inscription/front/templates/inscription.html
+++ b/apps/inscription/front/templates/inscription.html
@@ -14,7 +14,7 @@
 				<div class="col-md-12">
 					<div class="col-md-6">
 						<div class="col-md-12 center-block">
-						  <h2 >Etudiant (gratuit)</h4>
+						  <h2 >Visiteur - Conférencier - Intervenant Atelier</h4>
 						</div>
 						<?php if (True): ?>
 						<div class="col-md-12">
@@ -125,7 +125,7 @@
 						</div>
 						<div class="col-md-6">
 							<div class="col-md-12 center-block">
-							  <h2 >Entreprise</h4>
+							  <h2 >Entreprise - Exposant</h4>
 							</div>
 							<form method="post" action="/entreprise/inscription/">
 								<div class="form-group">
